--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         background-color: grey;
         text-align: center;
         padding: 1.5px;
-      }</style>>
+      }</style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
